--- a/web/assets/main.css
+++ b/web/assets/main.css
@@ -12,30 +12,25 @@ body{
 }
 
 .body{
-	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
-	width: auto;
-	height: auto;
 	background-image: url(city.jpg);
 	background-size: cover;
 	-webkit-filter: blur(5px);
-	z-index: 0;
 }
 
 .grad{
 	position: absolute;
-	top: -20px;
-	left: -20px;
-	right: -40px;
-	bottom: -40px;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
 	width: auto;
 	height: auto;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
-	z-index: 1;
+	z-index: -1;
 	opacity: 0.7;
+	/*background-image: url(city.jpg);
+	background-size: cover;
+	-webkit-filter: blur(5px);*/
 }
 
 .header{
@@ -65,7 +60,15 @@ body{
 .header div span, .headerP div span{
 	color: #5379fa !important;
 }
+
+.logout{
+	float: right;
+}
 .headerP a{
+	cursor: pointer;
+	color: white;
+	font-size: 22px;
+	padding: 10px;
 }
 
 .login{
